@@ -10,10 +10,12 @@ package com.arcanc.nedaire.content.book.parts;
 
 import java.awt.Color;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.screens.Screen;
 import org.apache.commons.compress.utils.Lists;
 
 import com.arcanc.nedaire.content.book.EnchiridionInstance;
@@ -24,10 +26,9 @@ import com.arcanc.nedaire.util.database.NDatabase;
 import com.arcanc.nedaire.util.helpers.FluidHelper;
 import com.arcanc.nedaire.util.helpers.RenderHelper;
 import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.PoseStack;
 
 import net.minecraft.ChatFormatting;
-import net.minecraft.client.gui.GuiComponent;
+
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.Style;
@@ -38,6 +39,7 @@ import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.phys.Vec2;
 import net.minecraftforge.client.extensions.common.IClientFluidTypeExtensions;
 import net.minecraftforge.fluids.FluidStack;
+import org.jetbrains.annotations.NotNull;
 
 public class EnchElementDiffuserRecipe extends EnchElementAbstractRecipe 
 {
@@ -82,34 +84,35 @@ public class EnchElementDiffuserRecipe extends EnchElementAbstractRecipe
 	}
 	
 	@Override
-	public void onDraw(PoseStack pos, int mouseX, int mouseY, float f) 
+	public void onDraw(@NotNull GuiGraphics guiGraphics, int mouseX, int mouseY, float f)
 	{
 		recipe.ifPresent(r -> 
 		{
+			Minecraft mc = RenderHelper.mc();
 			NDiffuserRecipe rec = (NDiffuserRecipe)r;
 
 			Ingredient in = rec.input;
 			ItemStack stack = getStackAtCurrentTime(in);
 			ItemStack highlighted = ItemStack.EMPTY;
-			RenderHelper.renderItemStack(pos, stack, (int)positions.get(0).x, (int)positions.get(0).y, true);
+			RenderHelper.renderItemStack(guiGraphics, stack, (int)positions.get(0).x, (int)positions.get(0).y, true);
 			if (mouseX >= (int)positions.get(0).x && mouseY >= (int)positions.get(0).y && mouseX <= (int)positions.get(0).x + 16 && mouseY <= positions.get(0).y + 16)
 			{
 				highlighted = stack;
 			}
 
-			RenderHelper.renderItemStack(pos, rec.output.get(), (int)positions.get(2).x, (int)positions.get(2).y, true);
+			RenderHelper.renderItemStack(guiGraphics, rec.output.get(), (int)positions.get(2).x, (int)positions.get(2).y, true);
 			if (mouseX >= (int)positions.get(2).x && mouseY >= (int)positions.get(2).y && mouseX <= (int)positions.get(2).x + 16 && mouseY <= positions.get(2).y + 16)
 			{
 				highlighted = rec.output.get();
 			}
 			
-			RenderHelper.renderItemStack(pos, new ItemStack(NRegistration.RegisterBlocks.DIFFUSER), (int)positions.get(3).x, (int)positions.get(3).y, true);
+			RenderHelper.renderItemStack(guiGraphics, new ItemStack(NRegistration.RegisterBlocks.DIFFUSER), (int)positions.get(3).x, (int)positions.get(3).y, true);
 			if (mouseX >= (int)positions.get(3).x && mouseY >= (int)positions.get(3).y && mouseX <= (int)positions.get(3).x + 16 && mouseY <= positions.get(3).y + 16)
 			{
 				highlighted = new ItemStack(NRegistration.RegisterBlocks.DIFFUSER);
 			}
 			
-			pos.pushPose();
+			guiGraphics.pose().pushPose();
 			RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0f);
 			RenderSystem.enableBlend();
 			RenderSystem.defaultBlendFunc();
@@ -124,19 +127,18 @@ public class EnchElementDiffuserRecipe extends EnchElementAbstractRecipe
 	
 			RenderSystem.setShaderColor(color.getRed() / 255f, color.getGreen() / 255f, color.getBlue() / 255f, color.getAlpha() / 255f);
 			RenderSystem.setShaderTexture(0, still.atlasLocation());
-			GuiComponent.blit(pos, (int)positions.get(1).x, (int)positions.get(1).y, 0, 16, 16, still);
+			guiGraphics.blit((int)positions.get(1).x, (int)positions.get(1).y, 0, 16, 16, still);
 			
-			RenderSystem.setShaderTexture(0, EnchiridionScreen.TEXT);
 			RenderSystem.setShaderColor(1.0F, 1.0F, 1.0F, 1.0f);
 			
-			GuiComponent.blit(pos, (int)arrowDown.x, (int)arrowDown.y, 241, 98, 15, 14);
-			GuiComponent.blit(pos, (int)arrowDiag.x, (int)arrowDiag.y, 209, 97, 17, 15);
-			GuiComponent.blit(pos, (int)arrowRight.x, (int)arrowRight.y, 234, 53, animateArrow(rec.getTotalProcessTime()), 15);
+			guiGraphics.blit(EnchiridionScreen.TEXT, (int)arrowDown.x, (int)arrowDown.y, 241, 98, 15, 14);
+			guiGraphics.blit(EnchiridionScreen.TEXT, (int)arrowDiag.x, (int)arrowDiag.y, 209, 97, 17, 15);
+			guiGraphics.blit(EnchiridionScreen.TEXT, (int)arrowRight.x, (int)arrowRight.y, 234, 53, animateArrow(rec.getTotalProcessTime()), 15);
 			
 			if (!highlighted.isEmpty())
 			{
 				RenderSystem.enableBlend();
-				ench.getScreen().renderTooltip(pos, ench.getScreen().getTooltipFromItem(highlighted), highlighted.getTooltipImage(), mouseX, mouseY);
+				guiGraphics.renderTooltip(mc.font, Screen.getTooltipFromItem(mc, highlighted), highlighted.getTooltipImage(), mouseX, mouseY);
 				RenderSystem.disableBlend();
 			}
 			else if (mouseX >= (int)positions.get(1).x && mouseY >= (int)positions.get(1).y && mouseX <= (int)positions.get(1).x + 16 && mouseY <= positions.get(1).y + 16)
@@ -151,16 +153,16 @@ public class EnchElementDiffuserRecipe extends EnchElementAbstractRecipe
 				list.add(Component.literal(FluidHelper.getRegistryName(fluid.getFluid()).toString()).withStyle(ChatFormatting.DARK_GRAY));
 				
 				RenderSystem.enableBlend();
-				ench.getScreen().renderTooltip(pos, list, Optional.empty(), mouseX, mouseY);
+				guiGraphics.renderTooltip(mc.font, list, Optional.empty(), mouseX, mouseY);
 				RenderSystem.disableBlend();
 			}
 			else if (mouseX >= arrowRight.x && mouseY >= arrowRight.y && mouseX <= arrowRight.x + 22 && mouseY <= arrowRight.y + 14)
 			{
 				RenderSystem.enableBlend();
 				
-				ench.getScreen().renderTooltip(pos, Arrays.asList(Component.translatable(NDatabase.GUI.Enchiridion.Recipes.Translatable.TICKS, rec.getTotalProcessTime())), Optional.empty(), mouseX, mouseY);
+				guiGraphics.renderTooltip(mc.font, List.of(Component.translatable(NDatabase.GUI.Enchiridion.Recipes.Translatable.TICKS, rec.getTotalProcessTime())), Optional.empty(), mouseX, mouseY);
 			}
-			pos.popPose();
+			guiGraphics.pose().popPose();
 		});
 	}
 
